--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-tailwind==3.6.0
 Pillow==10.1.0
 psycopg2-binary==2.9.9
 django-cors-headers==4.3.0
+django-environ==0.11.2
 django-restframework==0.0.1
 djangorestframework==3.14.0
 psycopg2==2.9.9
